gitlab/issues_text/target_tricore/host_missing/accel_missing/1774
8.1-rc0 failure to build with capstone 5.0
Description of problem:
Use >=capstone-5.0 dependency, try to build qemu, get this error:
```
/opt/homebrew/Cellar/capstone/5.0/include/capstone/tricore.h:561:3: error:
redefinition of 'tricore_feature' as different kind of symbol
} tricore_feature;
  ^
../target/tricore/cpu.h:261:19: note: previous definition is here
static inline int tricore_feature(CPUTriCoreState *env, int feature)
                  ^
1 error generated.
```

The fix is trivial and it was already mentioned in the mailing list but wasn't fixed for rc0, so I figured it might have been forgotten about.

https://lore.kernel.org/qemu-devel/CA+PgxXVxVKpT0SZ3N+Fc1YvXCiwkkbqm0FmLKqLTbgcDpYCNgg@mail.gmail.com/

If you meet any other problem with capstone (e.g. some regression), please don't hesitate to report it mainstream.

There are plans to make a new patch release soon with fixes for some most annoying bugs since the 5.0 release: https://github.com/capstone-engine/capstone/issues/2081

https://github.com/capstone-engine/capstone/releases
